--- a/SeleniumAutomationProject/test-output/old/Suite/methods-alphabetical.html
+++ b/SeleniumAutomationProject/test-output/old/Suite/methods-alphabetical.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dced80">  <td>23/08/30 12:39:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AmazonDemoTest.amazonTest(java.util.Map)[pri:0, instance:org.sap.tests.AmazonDemoTest@3590fc5b]">amazonTest</td> 
-  <td>TestNG-test=Test-1@600017090</td>   <td></td> </tr>
-<tr bgcolor="dced80">  <td>23/08/30 12:39:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AmazonDemoTest.amazonTest(java.util.Map)[pri:0, instance:org.sap.tests.AmazonDemoTest@3590fc5b]">amazonTest</td> 
-  <td>TestNG-test=Test-1@600017090</td>   <td></td> </tr>
-<tr bgcolor="82fcac">  <td>23/08/30 12:39:36</td>   <td>-9405</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp([Ljava.lang.Object;)[pri:0, instance:org.sap.tests.AmazonDemoTest@3590fc5b]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-1@600017090</td>   <td></td> </tr>
-<tr bgcolor="82fcac">  <td>23/08/30 12:39:36</td>   <td>-9405</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp([Ljava.lang.Object;)[pri:0, instance:org.sap.tests.AmazonDemoTest@3590fc5b]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-1@600017090</td>   <td></td> </tr>
-<tr bgcolor="82fcac">  <td>23/08/30 12:39:58</td>   <td>12822</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:org.sap.tests.AmazonDemoTest@3590fc5b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-1@600017090</td>   <td></td> </tr>
-<tr bgcolor="82fcac">  <td>23/08/30 12:39:58</td>   <td>12822</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:org.sap.tests.AmazonDemoTest@3590fc5b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-1@600017090</td>   <td></td> </tr>
+<tr bgcolor="94f07b">  <td>23/08/30 18:19:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GuruLoginTest.loginValidCredentials(java.util.Map)[pri:0, instance:org.sap.tests.GuruLoginTest@515c6049]">loginValidCredentials</td> 
+  <td>TestNG-test=Test-1@12139181</td>   <td></td> </tr>
+<tr bgcolor="94f07b">  <td>23/08/30 18:19:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GuruLoginTest.loginValidCredentials(java.util.Map)[pri:0, instance:org.sap.tests.GuruLoginTest@515c6049]">loginValidCredentials</td> 
+  <td>TestNG-test=Test-1@12139181</td>   <td></td> </tr>
+<tr bgcolor="6d6ab7">  <td>23/08/30 18:19:19</td>   <td>-8818</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp([Ljava.lang.Object;)[pri:0, instance:org.sap.tests.GuruLoginTest@515c6049]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@12139181</td>   <td></td> </tr>
+<tr bgcolor="6d6ab7">  <td>23/08/30 18:19:19</td>   <td>-8818</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp([Ljava.lang.Object;)[pri:0, instance:org.sap.tests.GuruLoginTest@515c6049]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@12139181</td>   <td></td> </tr>
+<tr bgcolor="6d6ab7">  <td>23/08/30 18:19:31</td>   <td>2761</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:org.sap.tests.GuruLoginTest@515c6049]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@12139181</td>   <td></td> </tr>
+<tr bgcolor="6d6ab7">  <td>23/08/30 18:19:31</td>   <td>2761</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:org.sap.tests.GuruLoginTest@515c6049]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@12139181</td>   <td></td> </tr>
 </table>
