--- a/SeleniumAutomationProject/test-output/old/Suite/classes.html
+++ b/SeleniumAutomationProject/test-output/old/Suite/classes.html
@@ -87,6 +87,10 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>loginInvalidCredentials</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>loginValidCredentials</td>
 <td>&nbsp;</td></tr>
 <tr>
