--- a/SeleniumAutomationProject/test-output/emailable-report.html
+++ b/SeleniumAutomationProject/test-output/emailable-report.html
@@ -9,18 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">1,408</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">16,885</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">org.sap.tests.GuruLoginTest</td><td><a href="#m0">loginInvalidCredentials</a></td><td rowspan="1">1693479824709</td><td rowspan="1">0</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">org.sap.tests.GuruNewCustomerTest</td><td><a href="#m0">AddNewCustomer</a></td><td rowspan="1">1693812585634</td><td rowspan="1">8381</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">org.sap.tests.GuruLoginTest#loginInvalidCredentials</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.RuntimeException: java.lang.NullPointerException: Cannot invoke &quot;org.apache.poi.ss.usermodel.Cell.getStringCellValue()&quot; because the return value of &quot;org.apache.poi.ss.usermodel.Row.getCell(int)&quot; is null
-	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
-	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
-	at java.base/java.lang.Thread.run(Thread.java:833)
-Caused by: java.lang.NullPointerException: Cannot invoke &quot;org.apache.poi.ss.usermodel.Cell.getStringCellValue()&quot; because the return value of &quot;org.apache.poi.ss.usermodel.Row.getCell(int)&quot; is null
-	at com.sap.utils.ExcelUtils.getTestData(ExcelUtils.java:40)
-	at com.sap.utils.DataProviderUtils.getData(DataProviderUtils.java:18)
-	... 12 more
-... Removed 17 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">org.sap.tests.GuruNewCustomerTest#AddNewCustomer</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{EmailId=123@gmail.com, gender=Female, Address=Marathahalli, City=Banglore, testname=AddNewCustomer, execute=yes, passowrd=AjebytE, PinNum=534001, TelephoneNum=9876543210, DOB=05052000, State=Karnataka, browser=chrome, CustomerName=Devi, items=, faname=Devi, username=mngr525014}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
