--- a/SeleniumAutomationProject/test-output/index.html
+++ b/SeleniumAutomationProject/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Suite" class="navigator-link">
-              <span class="suite-name border-failed">Suite</span>
+              <span class="suite-name border-passed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\Users\SPURGE\git\Team_Green\SeleniumAutomationProject\testng.xml</span>
+                    <span>C:\Users\SPUGE\git\team working folder\Team_Green\SeleniumAutomationProject\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,21 +92,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method, 1 failed,   </span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Suite" class="hide-methods failed suite-Suite"> (hide)</a> <!-- hide-methods failed suite-Suite -->
-                      <a href="#" panel-name="suite-Suite" class="show-methods failed suite-Suite"> (show)</a> <!-- show-methods failed suite-Suite -->
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-Suite" class="hide-methods passed suite-Suite"> (hide)</a> <!-- hide-methods passed suite-Suite -->
+                      <a href="#" panel-name="suite-Suite" class="show-methods passed suite-Suite"> (show)</a> <!-- show-methods passed suite-Suite -->
                     </span>
-                    <div class="method-list-content failed suite-Suite">
+                    <div class="method-list-content passed suite-Suite">
                       <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="org.sap.tests.GuruLoginTest" class="method navigator-link" hash-for-method="loginInvalidCredentials">loginInvalidCredentials</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="org.sap.tests.GuruNewCustomerTest" class="method navigator-link" hash-for-method="AddNewCustomer({EmailId=123@gmail.com, gender=Female, Address=Marathahalli, City=Banglore, testname=AddNewCustomer,...)">AddNewCustomer({EmailId=123@gmail.com, gender=Female, Address=Marathahalli, City=Banglore, testname=AddNewCustomer,...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content failed suite-Suite -->
+                    </div> <!-- method-list-content passed suite-Suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -118,43 +118,34 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
-          <div class="suite-Suite-class-failed">
+          <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">org.sap.tests.GuruLoginTest</span>
+              <img src="passed.png"/>
+              <span class="class-name">org.sap.tests.GuruNewCustomerTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="loginInvalidCredentials">
-                  </a> <!-- loginInvalidCredentials -->
-                  <span class="method-name">loginInvalidCredentials</span>
-                  <div class="stack-trace">java.lang.RuntimeException: java.lang.NullPointerException: Cannot invoke &quot;org.apache.poi.ss.usermodel.Cell.getStringCellValue()&quot; because the return value of &quot;org.apache.poi.ss.usermodel.Row.getCell(int)&quot; is null
-	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
-	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
-	at java.base/java.lang.Thread.run(Thread.java:833)
-Caused by: java.lang.NullPointerException: Cannot invoke &quot;org.apache.poi.ss.usermodel.Cell.getStringCellValue()&quot; because the return value of &quot;org.apache.poi.ss.usermodel.Row.getCell(int)&quot; is null
-	at com.sap.utils.ExcelUtils.getTestData(ExcelUtils.java:40)
-	at com.sap.utils.DataProviderUtils.getData(DataProviderUtils.java:18)
-	... 12 more
-... Removed 17 stack frames
-</div> <!-- stack-trace -->
+                  <a name="AddNewCustomer({EmailId=123@gmail.com, gender=Female, Address=Marathahalli, City=Banglore, testname=AddNewCustomer,...)">
+                  </a> <!-- AddNewCustomer({EmailId=123@gmail.com, gender=Female, Address=Marathahalli, City=Banglore, testname=AddNewCustomer,...) -->
+                  <span class="method-name">AddNewCustomer</span>
+                  <span class="parameters">({EmailId=123@gmail.com, gender=Female, Address=Marathahalli, City=Banglore, testname=AddNewCustomer, execute=yes, passowrd=AjebytE, PinNum=534001, TelephoneNum=9876543210, DOB=05052000, State=Karnataka, browser=chrome, CustomerName=Devi, items=, faname=Devi, username=mngr525014})</span>
                   <em>
-(log in with Invalid credentials)                  </em>
+(Add New Customer Details)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-failed -->
+          </div> <!-- suite-Suite-class-passed -->
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\SPURGE\git\Team_Green\SeleniumAutomationProject\testng.xml</span>
+            <span class="header-content">C:\Users\SPUGE\git\team working folder\Team_Green\SeleniumAutomationProject\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite data-provider-thread-count=&quot;3&quot; name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+&lt;suite parallel=&quot;methods&quot; data-provider-thread-count=&quot;3&quot; name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;listeners&gt;
     &lt;listener class-name=&quot;org.sap.Listeners.ListenersClass&quot;/&gt;
     &lt;listener class-name=&quot;org.sap.Listeners.MethodInterceptor&quot;/&gt;
@@ -165,6 +156,7 @@ Caused by: java.lang.NullPointerException: Cannot invoke &quot;org.apache.poi.ss
       &lt;class name=&quot;org.sap.tests.OrangeHrmTests&quot;/&gt;
       &lt;class name=&quot;org.sap.tests.AmazonDemoTest&quot;/&gt;
       &lt;class name=&quot;org.sap.tests.GuruLoginTest&quot;/&gt;
+      &lt;class name=&quot;org.sap.tests.GuruNewCustomerTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -178,7 +170,7 @@ Caused by: java.lang.NullPointerException: Cannot invoke &quot;org.apache.poi.ss
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (3 classes)</span>
+                <span class="test-name">Test (4 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -206,14 +198,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'loginInvalidCredentials')
-data.setCell(0, 2, 'org.sap.tests.GuruLoginTest')
-data.setCell(0, 3, 0);
+data.setCell(0, 1, 'AddNewCustomer')
+data.setCell(0, 2, 'org.sap.tests.GuruNewCustomerTest')
+data.setCell(0, 3, 8381);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 0 ms</span>
+              <span class="suite-total-time">Total running time: 8 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -232,16 +224,16 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">org.sap.tests.AmazonDemoTest</span>
+              <span class="ignored-class-name">org.sap.tests.OrangeHrmTests</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">m1</span>
+                <span class="ignored-method-name">test1</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
             <div class="ignored-class-div">
-              <span class="ignored-class-name">org.sap.tests.OrangeHrmTests</span>
+              <span class="ignored-class-name">org.sap.tests.AmazonDemoTest</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">test1</span>
+                <span class="ignored-method-name">m1</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -252,6 +244,20 @@ return data;
             <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="chronological-class">
+              <div class="chronological-class-name">org.sap.tests.GuruNewCustomerTest</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp([{EmailId=123@gmail.com, gender=Female, Address=Marathahalli, City=Banglore, testname=AddNewCustomer...)</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">AddNewCustomer({EmailId=123@gmail.com, gender=Female, Address=Marathahalli, City=Banglore, testname=AddNewCustomer,...)</span>
+                <span class="method-start">6144 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">14706 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
