--- a/SeleniumAutomationProject/test-output/old/Default suite/classes.html
+++ b/SeleniumAutomationProject/test-output/old/Default suite/classes.html
@@ -4,18 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>org.sap.tests.GuruLoginTest</td>
+<td>org.sap.tests.GuruNewCustomerTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginInvalidCredentials</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>loginValidCredentials</td>
+<td>AddNewCustomer</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
