--- a/SeleniumAutomationProject/test-output/old/Suite/methods.html
+++ b/SeleniumAutomationProject/test-output/old/Suite/methods.html
@@ -1,10 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d96b9e">  <td>23/09/04 12:59:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp([Ljava.lang.Object;)[pri:0, instance:org.sap.tests.GuruNewCustomerTest@30c15d8b]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-1@1834031967</td>   <td></td> </tr>
-<tr bgcolor="e177e3">  <td>23/09/04 12:59:45</td>   <td>6134</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GuruNewCustomerTest.AddNewCustomer(java.util.Map)[pri:0, instance:org.sap.tests.GuruNewCustomerTest@30c15d8b]">AddNewCustomer</td> 
-  <td>TestNG-test=Test-1@1834031967</td>   <td></td> </tr>
-<tr bgcolor="d96b9e">  <td>23/09/04 12:59:54</td>   <td>14698</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:org.sap.tests.GuruNewCustomerTest@30c15d8b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-1@1834031967</td>   <td></td> </tr>
+<tr bgcolor="d96b9e">  <td>23/09/04 15:25:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:org.sap.tests.GuruLoginTest@2d3379b4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@1092619788</td>   <td></td> </tr>
+<tr bgcolor="94f07b">  <td>23/09/04 15:25:33</td>   <td>-2844</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GuruLoginTest.loginInvalidCredentials(java.util.Map)[pri:0, instance:org.sap.tests.GuruLoginTest@2d3379b4]">loginInvalidCredentials</td> 
+  <td>TestNG-test=Test-1@1092619788</td>   <td></td> </tr>
+<tr bgcolor="94f07b">  <td>23/09/04 15:25:33</td>   <td>-2844</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GuruLoginTest.loginInvalidCredentials(java.util.Map)[pri:0, instance:org.sap.tests.GuruLoginTest@2d3379b4]">loginInvalidCredentials</td> 
+  <td>TestNG-test=Test-1@1092619788</td>   <td></td> </tr>
+<tr bgcolor="d96b9e">  <td>23/09/04 15:25:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:org.sap.tests.GuruLoginTest@2d3379b4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@1092619788</td>   <td></td> </tr>
+<tr bgcolor="94f07b">  <td>23/09/04 15:25:33</td>   <td>-2844</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GuruLoginTest.loginInvalidCredentials(java.util.Map)[pri:0, instance:org.sap.tests.GuruLoginTest@2d3379b4]">loginInvalidCredentials</td> 
+  <td>TestNG-test=Test-1@1092619788</td>   <td></td> </tr>
+<tr bgcolor="d96b9e">  <td>23/09/04 15:25:28</td>   <td>-7557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp([Ljava.lang.Object;)[pri:0, instance:org.sap.tests.GuruLoginTest@2d3379b4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@1092619788</td>   <td></td> </tr>
+<tr bgcolor="d96b9e">  <td>23/09/04 15:25:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:org.sap.tests.GuruLoginTest@2d3379b4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@1092619788</td>   <td></td> </tr>
+<tr bgcolor="d96b9e">  <td>23/09/04 15:25:28</td>   <td>-7557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp([Ljava.lang.Object;)[pri:0, instance:org.sap.tests.GuruLoginTest@2d3379b4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@1092619788</td>   <td></td> </tr>
+<tr bgcolor="d96b9e">  <td>23/09/04 15:25:28</td>   <td>-7557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp([Ljava.lang.Object;)[pri:0, instance:org.sap.tests.GuruLoginTest@2d3379b4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@1092619788</td>   <td></td> </tr>
 </table>
